# RayTracerChallenge

./: .gitignore  CMakeLists.txt  README.md  TODO.md
RayTracer/: CMakeLists.txt
RayTracer/include/: AABB.h  BVH.h  CSG.h  Camera.h  Canvas.h  Checkers.h  CollisionInfo.h  Color.h  Constants.h  Cube.h  Cylinder.h  GradientPattern.h  Group.h  Impact.h  Intersection.h  LightSource.h  Material.h  Matrix.h  OBJParser.h  Pattern.h  Plane.h  PointSource.h  RNG.h  Ray.h  RingPattern.h  Shape.h  SmoothTriangle.h  Sphere.h  Stripes.h  TestPattern.h  Triangle.h  Tuple.h  Vector.h  World.h
RayTracer/src/: AABB.cpp  BVH.cpp  CSG.cpp  Camera.cpp  Canvas.cpp  Checkers.cpp  CollisionInfo.cpp  Color.cpp  Cube.cpp  Cylinder.cpp  GradientPattern.cpp  Group.cpp  Impact.cpp  Intersection.cpp  LightSource.cpp  Material.cpp  Matrix.cpp  OBJParser.cpp  Pattern.cpp  Plane.cpp  PointSource.cpp  RNG.cpp  Ray.cpp  RingPattern.cpp  Shape.cpp  SmoothTriangle.cpp  Sphere.cpp  Stripes.cpp  TestPattern.cpp  Triangle.cpp  Tuple.cpp  Vector.cpp  World.cpp  main.cpp
RayTracer/tests/: BVH_test.cpp  CSG_test.cpp  Camera_test.cpp  Canvas_test.cpp  Checkers_test.cpp  CollisionInfo_test.cpp  Color_test.cpp  Cube_test.cpp  Cylinder_test.cpp  GenImages_test.cpp  GradientPattern_test.cpp  Group_test.cpp  Impact_test.cpp  Intersection_test.cpp  Matrix_test.cpp  OBJParser_test.cpp  Parser_test.cpp  Pattern_test.cpp  Plane_test.cpp  PointSource_test.cpp  Ray_test.cpp  RingPattern_test.cpp  Shape_test.cpp  SmoothTriangle_test.cpp  Sphere_test.cpp  Stripe_test.cpp  Triangle_test.cpp  Tuple_test.cpp  Vector_test.cpp  World_test.cpp
src/: CMakeLists.txt
temp/: CMakeLists.txt
temp/include/: Camera.h  Canvas.h  CollisionInfo.h  Color.h  Constants.h  Cylinder.h  Group.h  Impact.h  LightSource.h  Material.h  Pattern.h  PointSource.h  Shape.h  Sphere.h  Stripes.h  World.h
temp/src/: Camera.cpp  Checkers.cpp  CollisionInfo.cpp  Color.cpp  Cube.cpp  Cylinder.cpp  Group.cpp  Impact.cpp  LightSource.cpp  Matrix.cpp  Pattern.cpp  Plane.cpp  PointSource.cpp  Ray.cpp  Shape.cpp  Sphere.cpp  Stripes.cpp  TestPattern.cpp  Triangle.cpp  Tuple.cpp  World.cpp
temp/tests/: Camera_test.cpp  Cube_test.cpp  Cylinder_test.cpp  GenImages_test.cpp  Plane_test.cpp  Sphere_test.cpp  Triangle_test.cpp  World_test.cpp
